# ee5450-module2-notes

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  README.md  STM32L4S5VITX_FLASH.ld  ee5450-module2-notes.ioc
Core/Inc/: main.h  nx_user.h  nx_wifi.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: gpio.c  main.c  nx_wifi.c  spi.c  stm32l4xx_it.c
Core/Startup/: tx_initialize_low_level.S
Drivers/WiFi/Inc/: es_wifi_conf.h
netxduo/addons/azure_iot/azure_iot_security_module/iot-security-module-core/: CMakeLists.txt
netxduo_stm32l4/: CMakeLists.txt
threadx/cmake/: arm-none-eabi.cmake
